force-app/main/default/objects/RetailManagement__c/RetailManagement__c.object-meta.xml
<CustomObject>
    <label>小売管理</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>小売管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>