force-app/main/default/objects/RetailManagement__c/fields/AccountSegment__c.field-meta.xml
<CustomField>
    <fullName>AccountSegment__c</fullName>
    <formula>TEXT( Supplier__r.Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先セグメント</label>
    <type>Text</type>
</CustomField>