force-app/main/default/objects/RetailManagement__c/fields/BasePrice_taxexcluded__c.field-meta.xml
<CustomField>
    <fullName>BasePrice_taxexcluded__c</fullName>
    <description>山本</description>
    <formula>FLOOR(BasePrice__c /1.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>本体価格(税抜)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>