force-app/main/default/objects/RetailManagement__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.PurchaseExperience__r.Buyer__c</formula>
    <label>売却先</label>
    <type>Text</type>
</CustomField>