force-app/main/default/objects/RetailManagement__c/fields/CarName__c.field-meta.xml
<CustomField>
    <fullName>CarName__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Mst_Models__r.Name</formula>
    <label>車種</label>
    <type>Text</type>
</CustomField>