force-app/main/default/objects/RetailManagement__c/fields/CarName_sys_del__c.field-meta.xml
<CustomField>
    <fullName>CarName_sys_del__c</fullName>
    <description>山本</description>
    <label>使用不可_車種</label>
    <length>50</length>
    <type>Text</type>
</CustomField>