force-app/main/default/objects/RetailManagement__c/fields/CarNo__c.field-meta.xml
<CustomField>
    <fullName>CarNo__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.CarNo__c</formula>
    <label>車台番号</label>
    <type>Text</type>
</CustomField>