force-app/main/default/objects/RetailManagement__c/fields/CarNo_sys__c.field-meta.xml
<CustomField>
    <fullName>CarNo_sys__c</fullName>
    <description>山本</description>
    <label>使用不可_車台番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>