force-app/main/default/objects/RetailManagement__c/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>コーティング</label>
    <type>Checkbox</type>
</CustomField>