force-app/main/default/objects/RetailManagement__c/fields/CommercialPrice__c.field-meta.xml
<CustomField>
    <fullName>CommercialPrice__c</fullName>
    <description>山本</description>
    <label>業販価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>