force-app/main/default/objects/RetailManagement__c/fields/DataAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>DataAcquisitionDate__c</fullName>
    <description>山本</description>
    <label>データ取得日</label>
    <type>Date</type>
</CustomField>