force-app/main/default/objects/RetailManagement__c/fields/DataRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>DataRequestedDate__c</fullName>
    <description>山本</description>
    <label>データ依頼日</label>
    <type>Date</type>
</CustomField>