force-app/main/default/objects/RetailManagement__c/fields/DateOfSaleDestination__c.field-meta.xml
<CustomField>
    <fullName>DateOfSaleDestination__c</fullName>
    <description>山本</description>
    <label>売却先決定日</label>
    <type>Date</type>
</CustomField>