force-app/main/default/objects/RetailManagement__c/fields/DeliveryCount__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCount__c</fullName>
    <description>山本</description>
    <formula>IF( ISBLANK(  DeliveryDate__c ),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納車完了カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>