force-app/main/default/objects/RetailManagement__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>山本</description>
    <label>納車完了日</label>
    <type>Date</type>
</CustomField>