force-app/main/default/objects/RetailManagement__c/fields/DeliveryMonth__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMonth__c</fullName>
    <description>山本</description>
    <formula>MONTH( DeliveryDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納車月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>