force-app/main/default/objects/RetailManagement__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>山本</description>
    <formula>IF( CONTAINS(PurchasingPerson__r.UserRole.Name , &quot;マネージャ&quot;), SUBSTITUTE(PurchasingPerson__r.UserRole.Name, &quot;マネージャ&quot;,&quot;&quot;) ,PurchasingPerson__r.UserRole.Name)</formula>
    <label>部署</label>
    <type>Text</type>
</CustomField>