force-app/main/default/objects/RetailManagement__c/fields/Destination_sys__c.field-meta.xml
<CustomField>
    <fullName>Destination_sys__c</fullName>
    <description>山本</description>
    <label>使用不可_売却先</label>
    <length>100</length>
    <type>Text</type>
</CustomField>