force-app/main/default/objects/RetailManagement__c/fields/DocumentOKdate_Retail__c.field-meta.xml
<CustomField>
    <fullName>DocumentOKdate_Retail__c</fullName>
    <description>山本</description>
    <label>小売り書類OK日</label>
    <type>Date</type>
</CustomField>