force-app/main/default/objects/RetailManagement__c/fields/ExhibitionHall__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionHall__c</fullName>
    <description>山本</description>
    <label>展示場</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仙台</fullName>
            </value>
            <value>
                <fullName>首都圏</fullName>
            </value>
            <value>
                <fullName>千葉</fullName>
            </value>
            <value>
                <fullName>神奈川</fullName>
            </value>
            <value>
                <fullName>静岡</fullName>
            </value>
            <value>
                <fullName>名古屋</fullName>
            </value>
            <value>
                <fullName>大阪</fullName>
            </value>
            <value>
                <fullName>神戸</fullName>
            </value>
            <value>
                <fullName>福岡</fullName>
            </value>
            <value>
                <fullName>セレクト岸和田</fullName>
            </value>
            <value>
                <fullName>神戸セレクト</fullName>
                <isActive>false</isActive>
                <label>神戸セレクト</label>
            </value>
            <value>
                <fullName>神戸バリュー</fullName>
                <isActive>false</isActive>
                <label>神戸バリュー</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>