force-app/main/default/objects/RetailManagement__c/fields/ExhibitionHall_InstallationDate__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionHall_InstallationDate__c</fullName>
    <description>山本</description>
    <label>展示場搬入日</label>
    <type>Date</type>
</CustomField>