force-app/main/default/objects/RetailManagement__c/fields/FinalCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>FinalCompletionDate__c</fullName>
    <description>山本</description>
    <label>最終完了日</label>
    <type>Date</type>
</CustomField>