force-app/main/default/objects/RetailManagement__c/fields/FirstListingDate__c.field-meta.xml
<CustomField>
    <fullName>FirstListingDate__c</fullName>
    <description>山本</description>
    <label>初出品日</label>
    <type>Date</type>
</CustomField>