force-app/main/default/objects/RetailManagement__c/fields/ForAssignmentOwner__c.field-meta.xml
<CustomField>
    <fullName>ForAssignmentOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>ForAssignmentOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ForAssignmentOwner</relationshipName>
    <type>Lookup</type>
</CustomField>