force-app/main/default/objects/RetailManagement__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Mst_Grades__r.Name</formula>
    <label>グレード</label>
    <type>Text</type>
</CustomField>