force-app/main/default/objects/RetailManagement__c/fields/Grade_sys__c.field-meta.xml
<CustomField>
    <fullName>Grade_sys__c</fullName>
    <description>山本</description>
    <label>使用不可_グレード</label>
    <length>50</length>
    <type>Text</type>
</CustomField>