force-app/main/default/objects/RetailManagement__c/fields/HowToSell__c.field-meta.xml
<CustomField>
    <fullName>HowToSell__c</fullName>
    <description>山本</description>
    <label>売却方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小売</fullName>
                <label>小売り</label>
            </value>
            <value>
                <fullName>業販</fullName>
            </value>
            <value>
                <fullName>下取買取</fullName>
            </value>
            <value>
                <fullName>在庫→他社AA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>