force-app/main/default/objects/RetailManagement__c/fields/InstallationCount__c.field-meta.xml
<CustomField>
    <fullName>InstallationCount__c</fullName>
    <description>山本</description>
    <formula>IF( ISBLANK( ExhibitionHall_InstallationDate__c ),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬入カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>