force-app/main/default/objects/RetailManagement__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>保険</label>
    <type>Checkbox</type>
</CustomField>