force-app/main/default/objects/RetailManagement__c/fields/JudgmentPerson__c.field-meta.xml
<CustomField>
    <fullName>JudgmentPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>仕切り判断担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>JudgmentPerson</relationshipName>
    <type>Lookup</type>
</CustomField>