force-app/main/default/objects/RetailManagement__c/fields/JudgmentPerson_Role__c.field-meta.xml
<CustomField>
    <fullName>JudgmentPerson_Role__c</fullName>
    <description>山本</description>
    <formula>JudgmentPerson__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕切り判断担当者ロール</label>
    <type>Text</type>
</CustomField>