force-app/main/default/objects/RetailManagement__c/fields/ListingElapsedDate__c.field-meta.xml
<CustomField>
    <fullName>ListingElapsedDate__c</fullName>
    <description>山本</description>
    <formula>IF( ISBLANK(  DateOfSaleDestination__c ),TODAY()- FirstListingDate__c, DateOfSaleDestination__c - FirstListingDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出品経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>