force-app/main/default/objects/RetailManagement__c/fields/Loan_BackMargin__c.field-meta.xml
<CustomField>
    <fullName>Loan_BackMargin__c</fullName>
    <description>山本</description>
    <label>ローンバック</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>