force-app/main/default/objects/RetailManagement__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>山本</description>
    <label>媒体</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>カーセンサー</fullName>
            </value>
            <value>
                <fullName>グーネット</fullName>
            </value>
            <value>
                <fullName>グーネットEC</fullName>
            </value>
            <value>
                <fullName>オートサーバー</fullName>
            </value>
            <value>
                <fullName>Quick×Quick</fullName>
            </value>
            <value>
                <fullName>オークネット</fullName>
            </value>
            <value>
                <fullName>ソコカラ連携</fullName>
            </value>
            <value>
                <fullName>紹介</fullName>
            </value>
            <value>
                <fullName>社内</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>