force-app/main/default/objects/RetailManagement__c/fields/OtherAA_DesiredAmount__c.field-meta.xml
<CustomField>
    <fullName>OtherAA_DesiredAmount__c</fullName>
    <description>山本</description>
    <label>他社AA希望金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>