force-app/main/default/objects/RetailManagement__c/fields/OtherAA_InstructionsDate__c.field-meta.xml
<CustomField>
    <fullName>OtherAA_InstructionsDate__c</fullName>
    <description>山本</description>
    <label>他社AA指示日</label>
    <type>Date</type>
</CustomField>