force-app/main/default/objects/RetailManagement__c/fields/OtherAA_PredictedSaleAmount__c.field-meta.xml
<CustomField>
    <fullName>OtherAA_PredictedSaleAmount__c</fullName>
    <description>山本</description>
    <label>AA読み</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>