force-app/main/default/objects/RetailManagement__c/fields/PartitionDate__c.field-meta.xml
<CustomField>
    <fullName>PartitionDate__c</fullName>
    <description>山本</description>
    <label>仕切り日</label>
    <type>Date</type>
</CustomField>