force-app/main/default/objects/RetailManagement__c/fields/PartitionPrice__c.field-meta.xml
<CustomField>
    <fullName>PartitionPrice__c</fullName>
    <description>山本</description>
    <formula>OtherAA_PredictedSaleAmount__c + RecyclingFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AA読み+リサイクル料金</inlineHelpText>
    <label>仕切り価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>