force-app/main/default/objects/RetailManagement__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>山本</description>
    <label>支払方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>現金一括</fullName>
            </value>
            <value>
                <fullName>頭金+現金</fullName>
            </value>
            <value>
                <fullName>頭+イオン</fullName>
            </value>
            <value>
                <fullName>頭+ジャックス</fullName>
            </value>
            <value>
                <fullName>頭+オリコ</fullName>
            </value>
            <value>
                <fullName>頭+アプラス</fullName>
            </value>
            <value>
                <fullName>頭+プレミア</fullName>
            </value>
            <value>
                <fullName>頭+セディナ</fullName>
            </value>
            <value>
                <fullName>全イオン</fullName>
            </value>
            <value>
                <fullName>全ジャックス</fullName>
            </value>
            <value>
                <fullName>全オリコ</fullName>
            </value>
            <value>
                <fullName>全アプラス</fullName>
            </value>
            <value>
                <fullName>全プレミア</fullName>
            </value>
            <value>
                <fullName>全セディナ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>