force-app/main/default/objects/RetailManagement__c/fields/PlaceOfStorage__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfStorage__c</fullName>
    <description>山本</description>
    <label>入庫場所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>