force-app/main/default/objects/RetailManagement__c/fields/PlannedDepositDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedDepositDate__c</fullName>
    <description>山本</description>
    <label>入金予定日</label>
    <type>Date</type>
</CustomField>