force-app/main/default/objects/RetailManagement__c/fields/PlannedDepositExceedingDay__c.field-meta.xml
<CustomField>
    <fullName>PlannedDepositExceedingDay__c</fullName>
    <description>山本</description>
    <formula>IF( ISBLANK( SalesReceiptDate__c ) , TODAY() -  PlannedDepositDate__c ,
IF(  SalesReceiptDate__c -  PlannedDepositDate__c  &lt; 0 ,0 , SalesReceiptDate__c -  PlannedDepositDate__c ))</formula>
    <label>入金予定日超過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>