force-app/main/default/objects/RetailManagement__c/fields/ProcessingDivision__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivision__c</fullName>
    <description>山本</description>
    <label>処理区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>抹消</fullName>
            </value>
            <value>
                <fullName>抹消済み</fullName>
            </value>
            <value>
                <fullName>輸出抹消</fullName>
            </value>
            <value>
                <fullName>名変</fullName>
            </value>
            <value>
                <fullName>中販名変</fullName>
            </value>
            <value>
                <fullName>直出し（名変）</fullName>
            </value>
            <value>
                <fullName>HMS名変</fullName>
            </value>
            <value>
                <fullName>HMS所変</fullName>
            </value>
            <value>
                <fullName>HMS抹消</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>