force-app/main/default/objects/RetailManagement__c/fields/Profits_hm__c.field-meta.xml
<CustomField>
    <fullName>Profits_hm__c</fullName>
    <description>山本</description>
    <formula>SalesAmount__c - TotalPayment_ExcludingTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>はなまる粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>