force-app/main/default/objects/RetailManagement__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>注文書</label>
    <referenceTo>PurchaseOrder__c</referenceTo>
    <relationshipLabel>小売管理</relationshipLabel>
    <relationshipName>RetailManagement</relationshipName>
    <type>Lookup</type>
</CustomField>