force-app/main/default/objects/RetailManagement__c/fields/PurchaseType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseType__c</fullName>
    <description>山本</description>
    <label>仕入種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>買い上げ</fullName>
            </value>
            <value>
                <fullName>折半</fullName>
            </value>
            <value>
                <fullName>委託</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>リユースAA</fullName>
            </value>
            <value>
                <fullName>買取</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>