force-app/main/default/objects/RetailManagement__c/fields/PurchasingPerson__c.field-meta.xml
<CustomField>
    <fullName>PurchasingPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>仕入担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PurchasingPerson</relationshipName>
    <type>Lookup</type>
</CustomField>