force-app/main/default/objects/RetailManagement__c/fields/Quick_PreRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>Quick_PreRegistrationDate__c</fullName>
    <description>山本</description>
    <label>クイック事前登録日</label>
    <type>Date</type>
</CustomField>