force-app/main/default/objects/RetailManagement__c/fields/ResultPickList__c.field-meta.xml
<CustomField>
    <fullName>ResultPickList__c</fullName>
    <description>山本</description>
    <label>結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小売り断念AA</fullName>
            </value>
            <value>
                <fullName>売れずAA</fullName>
            </value>
            <value>
                <fullName>小売り成約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>