force-app/main/default/objects/RetailManagement__c/fields/RetailAbandonedDay__c.field-meta.xml
<CustomField>
    <fullName>RetailAbandonedDay__c</fullName>
    <description>山本</description>
    <label>小売り断念日</label>
    <type>Date</type>
</CustomField>