force-app/main/default/objects/RetailManagement__c/fields/RetailConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>RetailConfirmDate__c</fullName>
    <description>山本</description>
    <label>小売り確認依頼日</label>
    <type>Date</type>
</CustomField>