force-app/main/default/objects/RetailManagement__c/fields/RetailManagement_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>RetailManagement_CreatedDate__c</fullName>
    <description>山本</description>
    <label>案件作成日</label>
    <type>Date</type>
</CustomField>