force-app/main/default/objects/RetailManagement__c/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.SalesAmount_OBIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談＞買取実績の売上金額を表示</inlineHelpText>
    <label>売上金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>