force-app/main/default/objects/RetailManagement__c/fields/SalesAmount_sys__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount_sys__c</fullName>
    <description>山本</description>
    <label>使用不可_売上金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>