force-app/main/default/objects/RetailManagement__c/fields/SalesDate__c.field-meta.xml
<CustomField>
    <fullName>SalesDate__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.SalesDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上日(営業実績)</label>
    <type>Date</type>
</CustomField>