force-app/main/default/objects/RetailManagement__c/fields/SalesDate_OBIC__c.field-meta.xml
<CustomField>
    <fullName>SalesDate_OBIC__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.SalesDate_OBIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上日(OBIC)</label>
    <type>Date</type>
</CustomField>