force-app/main/default/objects/RetailManagement__c/fields/SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>売却担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesPerson</relationshipName>
    <type>Lookup</type>
</CustomField>