force-app/main/default/objects/RetailManagement__c/fields/SalesPerson_Role__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson_Role__c</fullName>
    <description>山本</description>
    <formula>SalesPerson__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売却担当者ロール</label>
    <type>Text</type>
</CustomField>