force-app/main/default/objects/RetailManagement__c/fields/SalesReceipt_YearMonth__c.field-meta.xml
<CustomField>
    <fullName>SalesReceipt_YearMonth__c</fullName>
    <description>山本</description>
    <formula>TEXT(YEAR( SalesReceiptDate__c ))&amp;&quot;年&quot;&amp;TEXT(MONTH( SalesReceiptDate__c ))&amp;&quot;月&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入金計上年月</label>
    <type>Text</type>
</CustomField>