force-app/main/default/objects/RetailManagement__c/fields/SalesReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>SalesReceiptDate__c</fullName>
    <description>山本</description>
    <label>入金日</label>
    <type>Date</type>
</CustomField>