force-app/main/default/objects/RetailManagement__c/fields/SalesReceiptMonthSummary__c.field-meta.xml
<CustomField>
    <fullName>SalesReceiptMonthSummary__c</fullName>
    <description>山本</description>
    <formula>MONTH( SalesReceiptDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入金月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>