force-app/main/default/objects/RetailManagement__c/fields/SalesRecordingMonth__c.field-meta.xml
<CustomField>
    <fullName>SalesRecordingMonth__c</fullName>
    <description>山本</description>
    <formula>MONTH( SalesDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上計上月度(営業実績)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>