force-app/main/default/objects/RetailManagement__c/fields/SalesRecordingMonth_OBIC__c.field-meta.xml
<CustomField>
    <fullName>SalesRecordingMonth_OBIC__c</fullName>
    <description>山本</description>
    <formula>MONTH( SalesDate_OBIC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上計上月度(OBIC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>