force-app/main/default/objects/RetailManagement__c/fields/SalesStaff__c.field-meta.xml
<CustomField>
    <fullName>SalesStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>販売担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesStaff</relationshipName>
    <type>Lookup</type>
</CustomField>