force-app/main/default/objects/RetailManagement__c/fields/Schedule_DeliveryDateTime__c.field-meta.xml
<CustomField>
    <fullName>Schedule_DeliveryDateTime__c</fullName>
    <description>山本</description>
    <label>納車予定日時</label>
    <type>Date</type>
</CustomField>