force-app/main/default/objects/RetailManagement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>山本</description>
    <label>進捗状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小売準備</fullName>
            </value>
            <value>
                <fullName>回送中</fullName>
            </value>
            <value>
                <fullName>修理</fullName>
            </value>
            <value>
                <fullName>店頭</fullName>
            </value>
            <value>
                <fullName>売却</fullName>
            </value>
            <value>
                <fullName>書類待ち</fullName>
            </value>
            <value>
                <fullName>納車準備</fullName>
            </value>
            <value>
                <fullName>納車済み</fullName>
            </value>
            <value>
                <fullName>在庫→AA</fullName>
            </value>
            <value>
                <fullName>小売断念</fullName>
            </value>
            <value>
                <fullName>営業戻し</fullName>
            </value>
            <value>
                <fullName>小売→AA</fullName>
            </value>
            <value>
                <fullName>他社AA行き</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>