force-app/main/default/objects/RetailManagement__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>仕入先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>小売管理</relationshipLabel>
    <relationshipName>RetailManagement</relationshipName>
    <type>Lookup</type>
</CustomField>