force-app/main/default/objects/RetailManagement__c/fields/Supplier_sys__c.field-meta.xml
<CustomField>
    <fullName>Supplier_sys__c</fullName>
    <description>山本</description>
    <label>使用不可_仕入先</label>
    <length>200</length>
    <type>Text</type>
</CustomField>