force-app/main/default/objects/RetailManagement__c/fields/TotalPayment_ExcludingTax__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment_ExcludingTax__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.PurchasehAmount_OBIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕入価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>