force-app/main/default/objects/RetailManagement__c/fields/Trade_in__c.field-meta.xml
<CustomField>
    <fullName>Trade_in__c</fullName>
    <description>山本</description>
    <label>下取り有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>