force-app/main/default/objects/RetailManagement__c/fields/TradeIn_LotNo__c.field-meta.xml
<CustomField>
    <fullName>TradeIn_LotNo__c</fullName>
    <externalId>true</externalId>
    <label>下取りロット番号</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>